--- a/frontend/app/(search)/EpisodeSearchResults.module.scss
+++ b/frontend/app/(search)/EpisodeSearchResults.module.scss
@@ -1,4 +1,4 @@
-@import '../globals';
+@use '../globals';
 
 .results {
   position: relative;
@@ -31,14 +31,14 @@
     border: none;
     background: linear-gradient(
       0deg,
-      $bg-gray-opaque 0%,
-      rgba($bg-gray-opaque, 0.7) 70%,
-      rgba($bg-gray-opaque, 0) 100%
+      globals.$bg-gray-opaque 0%,
+      rgba(globals.$bg-gray-opaque, 0.7) 70%,
+      rgba(globals.$bg-gray-opaque, 0) 100%
     );
-    color: $primary-blue-lighter;
+    color: globals.$primary-blue-lighter;
 
     &:hover {
-      color: $primary-blue-lightest;
+      color: globals.$primary-blue-lightest;
 
       img {
         filter: brightness(125%);
