--- a/frontend/app/(search)/episode/[number]/MediaPlayer.module.scss
+++ b/frontend/app/(search)/episode/[number]/MediaPlayer.module.scss
@@ -1,13 +1,13 @@
-@import '../../../globals';
+@use '../../../globals';
 
 .mediaPlayer {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  background: $bg-gray;
+  background: globals.$bg-gray;
   border-radius: 0.5em;
-  border: 1px solid $bg-gray;
+  border: 1px solid globals.$bg-gray;
 
-  @include narrow {
+  @include globals.narrow {
     display: block;
   }
 
@@ -18,7 +18,7 @@
     align-self: center;
     text-shadow: none;
 
-    @include narrow {
+    @include globals.narrow {
       border-radius: 0.5em 0.5em 0 0;
     }
   }
@@ -42,15 +42,15 @@ button.share {
   align-items: flex-end;
   gap: 0.25em;
   padding: 0.5em 1.2em 0.65em;
-  background-color: $bg-gray;
+  background-color: globals.$bg-gray;
   border-radius: 2em;
 
   &:hover {
-    background-color: $bg-gray-lighter;
+    background-color: globals.$bg-gray-lighter;
   }
 
   &.open {
-    background-color: $bg-gray-lighter;
+    background-color: globals.$bg-gray-lighter;
   }
 
   img {
@@ -61,7 +61,7 @@ button.share {
 
 .disclaimer {
   font-size: 0.9em;
-  color: $fg-gray;
+  color: globals.$fg-gray;
 }
 
 .resumeToast {
@@ -72,13 +72,13 @@ button.share {
   button {
     border-radius: 2em;
     padding: 0.5em 1em;
-    background-color: $bg-gray;
+    background-color: globals.$bg-gray;
     display: flex;
     align-items: center;
     gap: 0.5em;
 
     &:hover {
-      background-color: $bg-gray-lighter;
+      background-color: globals.$bg-gray-lighter;
     }
 
     img {
