--- a/frontend/app/(search)/episode/[number]/TranscriptSearchResults.module.scss
+++ b/frontend/app/(search)/episode/[number]/TranscriptSearchResults.module.scss
@@ -1,19 +1,19 @@
-@import '../../../globals';
+@use '../../../globals';
 
 .transcriptSearchResults {
   height: 100%;
   margin: 0;
   padding: 0.5em;
-  background-color: $bg-gray-opaque;
+  background-color: globals.$bg-gray-opaque;
   overflow-y: scroll;
 
   li {
-    @include transcript-line;
+    @include globals.transcript-line;
   }
 
   .timecode {
     display: block;
     font-size: 0.9em;
-    color: $fg-gray;
+    color: globals.$fg-gray;
   }
 }
