--- a/frontend/app/about/page.module.scss
+++ b/frontend/app/about/page.module.scss
@@ -1,7 +1,7 @@
-@import '../globals';
+@use '../globals';
 
 .about {
-  max-width: $article-width;
+  max-width: globals.$article-width;
   margin: 0 auto 30vw;
   line-height: 1.4;
 }
