--- a/frontend/app/(search)/episode/[number]/MediaPlayer.module.scss
+++ b/frontend/app/(search)/episode/[number]/MediaPlayer.module.scss
@@ -12,7 +12,7 @@
   }
 
   audio,
-  video {
+  .youtubeEmbed {
     width: 100%;
     border-radius: 0.5em 0 0 0.5em;
     align-self: center;
@@ -28,8 +28,9 @@
     margin: 1em 0;
   }
 
-  .youtube-embed {
+  .youtubeEmbed {
     aspect-ratio: 16 / 9;
+    overflow: hidden;
   }
 }
 
